Homepage is done (hardcoded), nav fixed with a z-index

--- a/src/index.css
+++ b/src/index.css
@@ -105,6 +105,7 @@ form {
   padding: 1.5em 3em;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1em;
+  z-index: 3;
 }
 
 .navcircle {
@@ -1063,4 +1064,23 @@ form {
 .number-picker {
   display: flex;
   gap: 2rem;
+}
+
+/* ---------- forside Styling ---------- */
+.forside {
+  padding: 0.5em 2em 2em;
+  border-radius: var(--border-radius) var(--border-radius) 0 0;
+  background-color: var(--white);
+  margin-top: -3rem;
+  position: relative;
+}
+
+.flex-pil {
+  display: flex;
+  justify-content: end;
+  gap: 0.5rem;
+}
+
+.flex-pil img {
+  width: 8%;
 }
